<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">WakeOnLan GCM</string>
    <string name="pref_name">pref</string>
    <string name="html_name">WakeOnLanGCM.html</string>
	<string name="exportdata_name">WakeOnLanGCM.dat</string>
	<string name="CopyRightString">Copyright &#169; 2013&#8211;2018 KLab Inc.</string>
	<string name="UrlPrivacyPolicy">http://www.klab.com/jp/english/privacy/</string>
	<string name="WordPrivacyPolicy">Privacy Policy</string>
	<string name="ServerUrl">https://wolremote.appspot.com/push01</string>
	<string name="WordYes">Yes</string>
	<string name="WordNo">No</string>
	<string name="WordOK">OK</string>
	<string name="WordCancel">Cancel</string>
	<string name="WordNext">Next</string>
    <string name="WordExport">Export</string>
    <string name="WordImport">Import</string>
    <string name="WordAbout">About</string>
	<string name="WordExit">Exit</string>
	<string name="WordNewEntry">New Entry</string>
	<string name="WordTargetEntry">Target entries</string>
	<string name="WordGotoRegisterUI">GCM Registration UI</string>
	<string name="WordGotoMainUI">Back to Main Activity</string>
	<string name="WordSendPacket">Send Magic Packet</string>
	<string name="WordEditEntry">Edit this entry</string>
	<string name="WordRemoveEntry">Remove this entry</string>
	<string name="WordMailSubject">WakeOnLan GCM - Your Form</string>
	<string name="WordRegisterDevice">Register this device</string>
	<string name="WordUnregisterDevice">Unregister this device</string>
	<string name="WordResendMail">Resend HTML form</string>
	<string name="WordEnterNoSleep">Open the non-sleep screen</string>
	<string name="WordPassword">Password</string>
	<string name="WordHintPasswordField">Password for registration</string>
	<string name="WordAddOrEditEntry">Add/Edit an entry</string>
	<string name="WordEntryName">Entry Name</string>
	<string name="WordPortNumber">Port</string>
	<string name="WordMacAddress">MAC Address</string>
    <string name="MsgNoSleepMode">You will be able to avoid the sleep mode of the device by keeping this screen open. It means that your device will be able to handle messages from the network quickly.\r\n\r\nConnect the power supply to this device.\r\n\r\nPress Back button to exit.</string>
	<string name="MsgSpecifyPassword">Please specify password for the Form</string>
	<string name="MsgNoPassword">Password is not specified</string>
	<string name="MsgCreatingMail">Creating a mail..</string>
	<string name="MsgRegisterDevice">Register this device?</string>
	<string name="MsgUnregisterDevice">Unregister this device?</string>
	<string name="MsgMailText">Please load the attached html file in web browser. By submitting the HTML form, the registered Android device will send the Magic Packet.\nIf you want to unregister the device, run \"WakeOnLan GCM\" in your device and press \"Unregister\" button.</string>
	<string name="MsgCreateMail">Registration is finished. Next step is to send a e-mail to you that contains the HTML form to push messages through the web browser to this device.</string>
	<string name="MsgUnregistered">Unregistration is finished.\r\n\r\nNote that it might take a few minutes for the registration ID to be completed removed from the Google server.</string>
	<string name="MsgHtmlForm">Check the target entry, and enter the password that you set at the time of sending this form. By submitting this form, your device will send the Magic Packet.</string>
	<string name="MsgOverView">"You'll be able to send the Magic Packet from this application remotely via web browser after the registration.""</string>
	<string name="MsgRequirePrivateWifiNetwork">This app only works in the Wi-Fi network that uses private IP address space.</string>
	<string name="MsgActionSelect">Select an action</string>
	<string name="MsgRemoveEntry">Remove this entry?</string>
	<string name="MsgSendPacket">Send Magic Packet?</string>
	<string name="MsgMaxEntry">Too many entries</string>
	<string name="MsgNewEntry">Long press to show Privacy Policy</string>
	<string name="MsgHint1">(in alphanumeric)</string>
	<string name="MsgSpecifyValidName">Please specify the name in at least one alphanumeric character</string>
	<string name="MsgNameInUse">The name is already in use</string>
	<string name="MsgPortOutOfRange">The specified port number is out of range</string>
	<string name="MsgSpecifyValidPort">Please specify a valid port number</string>
	<string name="MsgSpecifyValidMac">Please specify a valid MAC address</string>
	<string name="MsgFileNotFound">File not found</string>
	<string name="MsgQueryImport">All existing data will be overwritten. Are you sure you want to continue?</string>
	<string name="MsgNoData">Data is not exist</string>
	<string name="MsgImportOK">Import is completed</string>
	<string name="MsgImportNG">Failed to import</string>
	<string name="MsgExportOK">Export is completed</string>
	<string name="MsgExportNG">Failed to export</string>
</resources>