<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/entry"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/WordAddOrEditEntry"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/line"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#CCCCCC" >
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:gravity="center"
            android:text="@string/WordEntryName"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:gravity="center"
            android:text="@string/WordPortNumber"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <EditText
            android:id="@+id/entryName"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:digits="0123456789abcdefghijklmnopqrstuvwxyz"
            android:hint="@string/MsgHint1"
            android:inputType="textEmailAddress"
            android:scrollHorizontally="true" />

        <EditText
            android:id="@+id/port"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:inputType="text|numberSigned"
            android:scrollHorizontally="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/WordMacAddress"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <EditText
            android:id="@+id/mac0"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:digits="0123456789abcdef"
            android:inputType="text"
            android:scrollHorizontally="true" />

        <EditText
            android:id="@+id/mac1"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:digits="0123456789abcdef"
            android:inputType="text"
            android:scrollHorizontally="true" />

        <EditText
            android:id="@+id/mac2"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:digits="0123456789abcdef"
            android:inputType="text"
            android:scrollHorizontally="true" />

        <EditText
            android:id="@+id/mac3"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:digits="0123456789abcdef"
            android:inputType="text"
            android:scrollHorizontally="true" />

        <EditText
            android:id="@+id/mac4"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:digits="0123456789abcdef"
            android:inputType="text"
            android:scrollHorizontally="true" />

        <EditText
            android:id="@+id/mac5"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:digits="0123456789abcdef"
            android:inputType="text"
            android:scrollHorizontally="true" />
    </LinearLayout>

</LinearLayout>